# OS

./: .gitignore  README.md
1. Compilation/: CMakeLists.txt
1. Compilation/scripts/: build_linux.sh  build_windows.cmd
1. Compilation/src/: main.cpp
2. Running in the background/: CMakeLists.txt
2. Running in the background/include/: background_launcher.h
2. Running in the background/src/: background_launcher.cpp
2. Running in the background/test/: test_launcher.cpp
3. Parallel logging/: CMakeLists.txt  Readme.md
3. Parallel logging/include/: platform.h
3. Parallel logging/src/: main.cpp  platform.cpp
4. Access to PCI devices/: CMakeLists.txt  Readme.md
4. Access to PCI devices/include/: temperature_measurement.h
4. Access to PCI devices/src/: device_simulator.cpp  main.cpp  rotating_log.cpp  serial.cpp  temperature_measurement.cpp  temperature_validator.cpp
5. Adding a web interface/: .env.example  CMakeLists.txt  README.md  Readme.md  docker-compose.yml  init-db.sql  run.bat  run.sh
5. Adding a web interface/core/: core.cpp  main_core.cpp  main_sim.cpp
5. Adding a web interface/cpp/: CMakeLists.txt
5. Adding a web interface/cpp/include/: config.h  data_processor.h  database.h  http_server.h  rotating_log.h  serial.h  temperature_validator.h
5. Adding a web interface/cpp/src/: config.cpp  data_processor.cpp  database.cpp  http_server.cpp  main.cpp  simulator.cpp  test_monitor.cpp
5. Adding a web interface/database/: database.cpp  database.h
5. Adding a web interface/include/: database.h  serial_port.h  webserver.h
5. Adding a web interface/scripts/: run_posix.sh  run_windows.bat
5. Adding a web interface/src/: database.cpp  main.cpp  serial_port.cpp  simulator.cpp  webserver.cpp
5. Adding a web interface/v2/: CMakeLists.txt  index.html
5. Adding a web interface/v2/src/: main.cpp  simulator.cpp
5. Adding a web interface/web/: Dockerfile  app.py  chart.js  index.html  live.html  requirements.txt  style.css  web.cpp  web.h
5. Adding a web interface/web/templates/: index.html
6. GUI/: CMakeLists.txt  Readme.md  index.html
6. GUI/core/: core.h
6. GUI/gui/: gui.cpp  gui.h  main_gui.cpp
6. GUI/scripts/: build_posix.sh  build_windows.bat  run_posix.sh  run_windows.bat  stop_posix.sh  stop_windows.bat
6. GUI/src/: gui_main.cpp  main.cpp  simulator.cpp  temp_monitor_gui.cpp  temp_monitor_gui.h
7. Virus Kiosk/: CMakeLists.txt
